docs: improve project readme