@@ -1,17 +1,11 @@
 # RuntimePatcher
 
-## Credit
-This project is built off a previous project found here: https://github.com/games647/RuntimeTransformer
-
-## Overview
 A tool allowing for easy class modification at runtime, when using a normal javaagent at startup would be too inconvenient.
 Note, this method comes with disadvantages, for example method modifiers may not be altered, new methods can not be created and neither can class inheritance be changed.
 
 ## Usage
 
-To install the artifact into your local maven repo execute the correct gradle wrapper with the "publishToMavenLocal" task, that is ```gradlew.bat publishToMavenLocal``` under Windows, and ```./gradlew publishToMavenLocal``` under *nix;
-
-Lets assume we want to inject an event handler into the `setHealth` method of `EntityLiving`,
+Let's assume we want to inject an event handler into the `setHealth` method of `EntityLiving`,
 therefore the method should something like this after transformation:
 
 ```java
@@ -30,8 +24,8 @@ public void setHealth(float newHealth) {
 To get there, we first need to define a patcher, this should optimally be in its own class and look something like this:
 
 ```java
-@Transform(EntityLiving.class) // The class we want to transform
-public class EntityLivingPatcher extends EntityLiving { // Extending EntityLiving in our patcher makes things easier, but isn't required (Which, for example, allows you to transform final classes)
+@Patcher(EntityLiving.class) // The class we want to transform
+public class EntityLivingPatcher extends EntityLiving { // Extending EntityLiving in our patcher makes things easier, but isn't required (Which, for example, allows you to patch final classes)
     
     @Inject(InjectionType.INSERT) // Our goal is to insert code at the beginning of the method, and leave everything else intact
     public void setHealth(float newHealth) { // Then just "override" the method as usual, if it is final add an _INJECTED to the method name
@@ -55,8 +49,8 @@ And that's pretty much it, now we just need to create our runtime patcher:
 new RuntimePatcher( EntityLivingPatcher.class );
 ```
 
-For Java 9+ runtimes, you have to allow self attaching by adding this startup `-Djdk.attach.allowAttachSelf=true`
-parameter or creating the `RuntimePatcher` instance in a separate process.
+For Java 9+ runtimes, self attaching an agent was disabled. To work around this, the library will run the Agent in a separate process. This means that you shouldn't have to do anything extra to 
+get it to work!
 
 And we're done.
 
@@ -75,9 +69,6 @@ There are three types of Injection:
 Run this command to build the api project.
 `./gradlew jar`
 
-If you want to build the example project add `-Pbuild-example`
-`./gradlew jar -Pbuild-example`
-
 ## Installation
 
 To install the api jar into your local maven repo run
@@ -88,22 +79,11 @@ The correct artifact can then be included using the following dependency definit
 ```xml
 
 <dependency>
-  <groupId>studio.craftory.runtimePatcher</groupId>
+  <groupId>studio.craftory.runtimepatcher</groupId>
   <artifactId>api</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 </dependency>
 ```
 
 Don't forget to actually include the artifact in your final jar, using the `maven-shade-plugin` or an equivalent alternative!
 
-## Alternative: Maven repository
-
-@sgdc3 has offered to host the artifacts on their build server, you can access them by adding the following to your
-`<repositories>` (This way you wont have to compile it locally):
-
-```xml
-        <repository>
-            <id>codemc</id>
-            <url>https://repo.codemc.org/repository/maven-public/</url>
-        </repository>
-```
